--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
         <ul class="list list-section-four">
     <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />
 
-        <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p> 
+        <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer</p> 
             <ul class="social-media-list">
                 <li class="social-media-blue"><a class="social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
                 <li class="social-media-blue"><a class="social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li>
                 <li class="social-media-blue"><a class="social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li>
                 <li class="social-media-blue"><a class="social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></ul></div></li>
 
-    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><li> <h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p></div></li>
-    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><li> <h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p></div></li>
-    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><li> <h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p></div></li>
+    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"> <h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p></div></li>
+    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"> <h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p></div></li>
+    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"> <h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p></div></li>
         </ul>
     </div>
 </section>
