--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
 
     <footer class="footer">
         <div class="container div-container">
-        <div class="div-footer"><a href="" class="logo-footer link">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p></div>
-    </div>
-
-    <div class="container"><p class="p-social-networks">Social media</p>
-        <ul class="social-networks-list">
-            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-        </ul>
-    </div>
+        <div class="div-footer"><a href="" class="logo-footer link">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            
+            <div class="container"><p class="p-social-networks">Social media</p>
+                <ul class="social-networks-list">
+                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+                </ul>
+            </div>
+        </div>
     </footer> 
 </body>
 </html>
