--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
 </head> 
 <body>
@@ -19,7 +19,7 @@
             <a href="./" class="logo link">Web<span class="span">Studio</span></a>
                 <ul class="list list-menu">
                      <li><a class="first link" href="./index.html" >Studio</a></li>
-                     <li><a class="first link" href="./portfolio.html"> Portfolio </a> </li>
+                     <li><a class="first link" href=""> Portfolio </a> </li>
                      <li><a class="first link" href="" >Contacts</a> </li>
                 </ul>
 </nav>
@@ -34,118 +34,62 @@
 </header>
 
 <main class="main-index">
-<section class="section-first">
-    <img src=".images/people-in-office.jpg" width="1440" height="600" alt="office"/>
+<section class="section section-first">
     <div class="container">
-
     <h1 class="heading-one">Effective Solutions for Your Business </h1>
         <button type="button" class="button">Order Service</button>
     </div>
 </section>
 
-
-
-
-<section class="section-two">
+<section class="section section-two">
     <div class="container">
-    <h2 class="visually-hidden">pusty</h2>
-
-    <ul class="list-section-two">
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-strategy"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="p-one">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-punctuality"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="p-one">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-diligence"></use></svg></div><h3 class="heading-three">Diligence</h3><p class="p-one">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-technologies"></use></svg></div><h3 class="heading-three">Technologies</h3><p class="p-one">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
-    </ul>
-    </div>
-</section>
-
-
-
-<section class="section-three">
-    <div class="container">
-    <h2 class="heading-two"> What are we doing </h2>
-
-    <ul class="list-section-three">
-    <li class="list-item-three"><img src="./images/mac.jpg" width="360" height="300" alt="mac" /></li>
-    <li class="list-item-three"><img src="./images/smartphone.jpg" width="360" height="300" alt="phone" /></li>
-    <li class="list-item-three"><img src="./images/smartphoneandcomputer.jpg" width="360" height="300" alt="anyway" /></li>
-    </ul>
-    </div>
-</section>
-
-
-
-<section class="section-four">
-    <div class="container"> 
-        <h2 class="heading-two">Our Team</h2>
-        <ul class="list list-section-four">
-    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />
-
-        <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer</p> 
-            <ul class="social-media-list">
-                <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-                <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li>
-                <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li>
-                <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></ul></div></li>
-
-    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"> <h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer</p>
-        <ul class="social-media-list">
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></ul>
-    </div></li>
-    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"> <h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing</p>
-        <ul class="social-media-list">
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></ul>
-    </div></li>
-    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"> <h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer</p>
-        <ul class="social-media-list">
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li>
-            <li class="social-media-blue"><a class="link social-media-icon-link" href=""><svg class="svg-icon-social-media" width="16" height="16" ><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></ul>
-    </div></li>
+        <h2 class="visually-hidden"></h2>
+        <ul class="list spdt-list">
+          <li class="spdt-point-list"><h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+          <li class="spdt-point-list"><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+          <li class="spdt-point-list"><h3 class="heading-three">Diligence</h3><p class="spdt-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+          <li class="spdt-point-list"><h3 class="heading-three">Technologies</h3><p class="spdt-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
-    </div>
-</section>
-
-
-
-<section class="section-five">
-<div class="container">
-    <h2 class="heading-two">Customers</h2>
-<ul class="customers-list">
-
-<li class="customer-list"><a class="customer-link" href=""><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-amd-sz"></use></svg></a></li>
-<li class="customer-list"><a class="customer-link" href=""><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-book-sz"></use></svg></a></li>
-<li class="customer-list"><a class="customer-link" href=""><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-nut-sz"></use></svg></a></li>
-<li class="customer-list"><a class="customer-link" href=""><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-tear-sz"></use></svg></a></li>
-<li class="customer-list"><a class="customer-link" href=""><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-leaf-sz"></use></svg></a></li>
-<li class="customer-list"><a class="customer-link" href=""><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-comp-sz"></use></svg></a></li>
-</ul>
 </div>
 </section>
+
+
+
+<section class="section section-three">
+    <div class="container">
+    <h2 class="heading-two">Our Team</h2>
+<ul class="list list-section-name">
+    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p></div></li>
+    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p></div></li>
+    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing          </p></div></li>
+    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer        </p></div></li>
+</ul>
+    </div>
+</section>
+
+
+<section class="section section-four">
+    <div class="container">
+    <h2 class="heading-two h-portfolio">Our Portfolio</h2>
+    <ul class="list list-our-portfolio">
+        <li class="portfolio-point"><img src="./images/banking-app-interface-concept.jpg" width="360" height="260" alt="Banking-app"><div class="container-name-categories"> <h3 class="heading-three">Banking App</h3><p class="p-portfolio">App</p></div></li>
+        <li class="portfolio-point"><img src="./images/cashless-payment.jpg" width="360" height="260" alt="cashless-payment"><div class="container-name-categories"><h3 class="heading-three">Cashless Payment</h3><p class="p-portfolio">Marketing</p></div></li>
+        <li class="portfolio-point"><img src="./images/meditation-app.jpg" width="360" height="260" alt="meditation-app"><div class="container-name-categories"><h3 class="heading-three">Meditation App</h3><p class="p-portfolio">App</p></div></li>
+        <li class="portfolio-point"><img src="./images/taxi-service.jpg" width="360" height="260" alt="taxi-service"><div class="container-name-categories"><h3 class="heading-three">Taxi Service</h3><p class="p-portfolio">Marketing</p></div></li>
+        <li class="portfolio-point"><img src="./images/screen-ilustration.jpg" width="360" height="260" alt="screen-ilustration"><div class="container-name-categories"><h3 class="heading-three">Screen Illustrations</h3><p class="p-portfolio">Design</p></div></li>
+        <li class="portfolio-point"><img src="./images/online-course.jpg" width="360" height="260" alt="online-course"><div class="container-name-categories"><h3 class="heading-three">Online Courses</h3><p class="p-portfolio">Marketing</p></div></li>
+    </ul>
+    </div>
+    </section>
+
 </main>
 
 
     <footer class="footer">
-        <div class="container div-container">
-        <div class="div-footer"><a href="" class="logo-footer link">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            
-            <div class="container"><p class="p-social-networks">Social media</p>
-                <ul class="social-networks-list">
-                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-                    <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-                </ul>
-            </div>
-        </div>
-        </div>
+        <div class="container footer-container">
+        <a href="./index.html" class="link logo-footer link-footer">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+
+    </div>
     </footer> 
 </body>
 </html>
