--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <div class="container">
         <h2 class="visually-hidden"></h2>
         <ul class="list spdt-list">
-          <li class="spdt-point-list"><h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
-          <li class="spdt-point-list"><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-          <li class="spdt-point-list"><h3 class="heading-three">Diligence</h3><p class="spdt-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-          <li class="spdt-point-list"><h3 class="heading-three">Technologies</h3><p class="spdt-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images/symbol-defs.svg#icon-Icon-1"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images/symbol-defs.svg#icon-Icon-2"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images/symbol-defs.svg#icon-Icon-3"></use></svg></div><h3 class="heading-three">Diligence</h3><p class="spdt-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images/symbol-defs.svg#icon-Icon-4"></use></svg></div><h3 class="heading-three">Technologies</h3><p class="spdt-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
 </div>
 </section>
