--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             
             <a href="./" class="logo link">Web<span class="span">Studio</span></a>
                 <ul class="list list-menu">
-                     <li><a class="first link" href="./index.html" >Studio</a></li>
-                     <li><a class="first link" href=""> Portfolio </a> </li>
-                     <li><a class="first link" href="" >Contacts</a> </li>
+                     <li><a class="first link current" href="./index.html" >Studio</a></li>
+                     <li><a class="first link current" href=""> Portfolio </a> </li>
+                     <li><a class="first link current" href="" >Contacts</a> </li>
                 </ul>
 </nav>
 
     <address class="address">
         <ul class="list list-address">
-            <li><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="contact link current">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="contact link current">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
 </div>
@@ -59,10 +59,10 @@
     <div class="container">
     <h2 class="heading-two">Our Team</h2>
 <ul class="list list-section-name">
-    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p></div></li>
-    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p></div></li>
-    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing          </p></div></li>
-    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer        </p></div></li>
+    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list list"><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#"></use></svg></a></li></div></li>
+    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media"></li></div></li>
+    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media"></li></div></li>
+    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media"></li></ul></div></li>
 </ul>
     </div>
 </section>
@@ -72,12 +72,12 @@
     <div class="container">
     <h2 class="heading-two h-portfolio">Our Portfolio</h2>
     <ul class="list list-our-portfolio">
-        <li class="portfolio-point"><img src="./images/banking-app-interface-concept.jpg" width="360" height="260" alt="Banking-app"><div class="container-name-categories"> <h3 class="heading-three">Banking App</h3><p class="p-portfolio">App</p></div></li>
-        <li class="portfolio-point"><img src="./images/cashless-payment.jpg" width="360" height="260" alt="cashless-payment"><div class="container-name-categories"><h3 class="heading-three">Cashless Payment</h3><p class="p-portfolio">Marketing</p></div></li>
-        <li class="portfolio-point"><img src="./images/meditation-app.jpg" width="360" height="260" alt="meditation-app"><div class="container-name-categories"><h3 class="heading-three">Meditation App</h3><p class="p-portfolio">App</p></div></li>
-        <li class="portfolio-point"><img src="./images/taxi-service.jpg" width="360" height="260" alt="taxi-service"><div class="container-name-categories"><h3 class="heading-three">Taxi Service</h3><p class="p-portfolio">Marketing</p></div></li>
-        <li class="portfolio-point"><img src="./images/screen-ilustration.jpg" width="360" height="260" alt="screen-ilustration"><div class="container-name-categories"><h3 class="heading-three">Screen Illustrations</h3><p class="p-portfolio">Design</p></div></li>
-        <li class="portfolio-point"><img src="./images/online-course.jpg" width="360" height="260" alt="online-course"><div class="container-name-categories"><h3 class="heading-three">Online Courses</h3><p class="p-portfolio">Marketing</p></div></li>
+        <li class="portfolio-point"><img src="./images/banking-app-interface-concept.jpg" width="360" height="260" alt="Banking-app"><div class="container-name-categories"> <h3 class="heading-three">Banking App</h3><p class="p-portfolio">App</p>             </div></li>
+        <li class="portfolio-point"><img src="./images/cashless-payment.jpg" width="360" height="260" alt="cashless-payment"><div class="container-name-categories"><h3 class="heading-three">Cashless Payment</h3><p class="p-portfolio">Marketing</p>           </div></li>
+        <li class="portfolio-point"><img src="./images/meditation-app.jpg" width="360" height="260" alt="meditation-app"><div class="container-name-categories"><h3 class="heading-three">Meditation App</h3><p class="p-portfolio">App</p>                       </div></li>
+        <li class="portfolio-point"><img src="./images/taxi-service.jpg" width="360" height="260" alt="taxi-service"><div class="container-name-categories"><h3 class="heading-three">Taxi Service</h3><p class="p-portfolio">Marketing</p>                       </div></li>
+        <li class="portfolio-point"><img src="./images/screen-ilustration.jpg" width="360" height="260" alt="screen-ilustration"><div class="container-name-categories"><h3 class="heading-three">Screen Illustrations</h3><p class="p-portfolio">Design</p>      </div></li>
+        <li class="portfolio-point"><img src="./images/online-course.jpg" width="360" height="260" alt="online-course"><div class="container-name-categories"><h3 class="heading-three">Online Courses</h3><p class="p-portfolio">Marketing</p>                   </div></li>
     </ul>
     </div>
     </section>
@@ -87,7 +87,7 @@
 
     <footer class="footer">
         <div class="container footer-container">
-        <a href="./index.html" class="link logo-footer link-footer">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="link logo-footer link-footer current">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </div>
     </footer> 
